# chatbot

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20260524000001_rag_schema.sql  20260524000002_rag_indexes.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/http/: llm.rs  middleware.rs  mod.rs
backend/src/http/handlers/: chat.rs  chat_stream.rs  health.rs  mod.rs
docs/: 00_overview.md  01_chat_api.md  02_rag_pipeline.md  04_scope_crypto_only.md  PLAN.md  roadmap.md
frontend/: .env.example  README.md  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.css  app.d.ts
frontend/src/lib/api/: chat.ts  client.ts  health.ts
frontend/src/lib/components/chat/: ChatPane.svelte  MarkdownMessage.svelte
frontend/src/lib/components/ui/: Button.svelte
frontend/src/lib/utils/: env.ts  types.ts
frontend/src/routes/: +page.svelte
frontend/src/types/: isomorphic-dompurify.d.ts
infra/: .env.example  README.md  docker-compose.yml
infra/postgres/init/: 001_extensions.sql
